--- a/static/styles.css
+++ b/static/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 20px;
     background-color: #221c1c; 
-    color: #312c72; 
+    color: #99b0e2; 
 }
 
 h1 {
