--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -5,12 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recommendations</title>
     <link rel="stylesheet" href="static/styles.css">
+
+    <style> /*Remove the default 
+    bullet points before each movie title */
+        .numbered-list {
+            list-style-type: none; 
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
     <h1>Recommended Movies</h1>
-    <ul>
+
+    <form action="/search" method="post">
+        <div>
+            <label for="search_query">Search Movies:</label>
+            <input type="text" id="search_query" name="search_query">
+            <button type="submit">Search</button>
+        </div>
+    </form>
+
+    {% if search_results %}
+    <h2>Search Results:</h2>
+    <ul class="numbered-list">
+        {% for movie in search_results %}
+        <li>{{loop.index}}. {{ movie['title'] }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    <ul class="numbered-list">
         {% for movie in movies %}
-            <li>{{ movie['title'] }}</li>
+            <li>{{loop.index}}.  {{ movie['title'] }}</li>
         {% endfor %}
     </ul>
     <a href="/">Go Back</a>
